# rust-blockchain

./: .gitignore  Cargo.toml  README.md
chain/: Cargo.toml
chain/src/: lib.rs  tx.rs  tx_test.rs
client/: Cargo.toml
docs/: getting_started.md  local_run.md  project_initialization.md  transactions.md  wallet.md
node/: Cargo.toml
node/src/: main.rs
node/src/blockchain/: block.rs  blockchain.rs  config.rs  mod.rs
node/src/blockchain/storage/: block_storage.rs  db.rs  tx_storage.rs
node/src/chain/: block.rs  blockchain.rs  mod.rs  system.rs  tx.rs
node/src/chain/storage/: db.rs  nonce_storage.rs
node/src/cli/: cli.rs
node/src/net/: behaviour.rs  client.rs  mod.rs  node.rs
node/src/test/: block_storage.rs  block_test.rs  blockchain_test.rs  commons.rs  mod.rs  nonce_storage_test.rs  tx_storage_test.rs  tx_test.rs
run/: config.json  genesis.json
src/chain/: block.rs  blockchain.rs  config.rs  mod.rs  stake.rs  tx.rs  wallet.rs
src/chain/storage/: block_storage.rs  mod.rs  tx_storage.rs
src/cli/: cli.rs
src/net/: node.rs
src/test/: block_storage.rs  block_test.rs  blockchain_test.rs  commons.rs  mod.rs  nonce_storage_test.rs  tx_storage_test.rs  tx_test.rs  wallet_test.rs
test/: config.json  genesis.json
wallet/: Cargo.toml
wallet/src/: crypto.rs  lib.rs  wallet.rs  wallet_test.rs
