[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
libsecp256k1 = "0.7.2"
rand = "0.8"
aes-gcm = "0.10.3"
serde = "1.0.219"
serde_json = "1.0.143"
hex = "0.4.3"
sha2 = "0.10.9"
rs_merkle = "1.5.0"
bigdecimal = "0.4.8"
rocksdb = "0.24.0"
clap = { version = "4.5.47", features = ["derive"] }
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tokio", "tcp", "macros", "noise", "yamux", "quic", "request-response", "json", "ecdsa"] }
rpassword = "7.4.0"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio-cron-scheduler = "0.14.0"
